added assembly and run script

--- a/application/src/main/resources/application.conf
+++ b/application/src/main/resources/application.conf
@@ -15,3 +15,8 @@ com.github.abulychev.iris {
         request-timeout = 5s
     }
 }
+
+akka {
+    event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+    loglevel = DEBUG
+}
